changes create api for reset password in swagger
