# server/router/user.js
@@ -9,6 +9,10 @@ Router.post('/login',User.login);
 Router.get('/get',verifyToken,User.getUser);
 Router.post('/update',verifyToken,User.updateUser);
 Router.delete('/delete',verifyToken,User.deleteUser);
+Router.get('/forgot-password',User.getForgotPassword)
+Router.post('/forgot-password',User.forgotPassword);
+Router.get('/reset-password/:token',User.getResetPassword);
+Router.post('/reset-password/:token', User.resetPassword);
 
 
 module.exports = Router;
